--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "ts-node ./src/index.ts",
 		"start": "npm run build && node ./dist/index.js",
-		"build": "npx tsc"
+		"build": "tsc"
 	},
 	"license": "ISC",
 	"dependencies": {
