--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-	"name": "library-cms-backend",
-	"version": "1.0.0",
-	"description": "",
-	"main": "src/index.ts",
-	"scripts": {
-		"dev": "ts-node ./src/index.ts",
-		"start": "npm run build && node ./dist/index.js",
-		"build": "tsc"
-	},
-	"license": "ISC",
-	"dependencies": {
-		"express": "^4.18.1"
-	},
-	"devDependencies": {
-		"@types/express": "^4.17.14",
-		"@types/node": "^18.7.18",
-		"nodemon": "^2.0.19",
-		"typescript": "^4.8.3"
-	}
+  "name": "library-cms-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.ts",
+  "scripts": {
+    "dev": "ts-node ./src/index.ts",
+    "start": "npm run build && node ./dist/index.js",
+    "build": "tsc"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.3"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": false
+  }
 }
