--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,8 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "moduleResolution": "node"
-  }
+  },
+  "files": ["./custom.d.ts"],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
