--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^4.3.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.185",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
