--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node ./dist/src/index.js",
     "build": "tsc"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.3.1",
@@ -28,14 +31,14 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.185",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.7.18",
+    "@types/node": "^18.11.13",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "^8.23.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.4"
   },
   "prettier": {
     "printWidth": 100,
