--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "multer": "^1.4.5-lts.1",
-    "prisma": "^4.3.1"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -37,6 +36,7 @@
     "eslint": "^8.23.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "prisma": "^4.16.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
